--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -104,4 +108,8 @@ button {
   button:active {
     background-color: #0f0f0f69;
   }
+}
+
+.transition-colors {
+  @apply tansition-colors duration-300 ease-in-out;
 }
