we r dumb coders. FIXED.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -111,5 +111,5 @@ button {
 }
 
 .transition-colors {
-  @apply tansition-colors duration-300 ease-in-out;
+  @apply transition-colors duration-300 ease-in-out;
 }
